Fix Accordion flashing blue when tapped on mobile devices (#4739)

--- a/packages/core/src/accordion/AccordionHeader.css
+++ b/packages/core/src/accordion/AccordionHeader.css
@@ -14,6 +14,7 @@
   text-align: left;
   cursor: var(--salt-actionable-cursor-hover);
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .saltAccordionHeader:focus-visible {
